--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "homepage": "https://makarenkoyevhenii.github.io/goit-react-hw-04-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
